@startuml uml

abstract class Funcionario {
  - id: int
  - nome: String
  - salarioBase: double
  + Funcionario(int id, String nome, double salarioBase)
  + getId(): int
  + getNome(): String
  + getSalarioBase(): double
  + calcularSalario(): double
}

class Desenvolvedor {
  - linguagem: String
  + Desenvolvedor(int id, String nome, double salarioBase, String linguagem)
  + getLinguagem(): String
  + calcularSalario(): double
}

class Gerente {
  - bonus: double
  + Gerente(int id, String nome, double salarioBase, double bonus)
  + getBonus(): double
  + calcularSalario(): double
}

class FuncionarioDAO {
  + FuncionarioDAO(String url, String usuario, String senha)
  + void inserir(Funcionario f) throws SQLException, IllegalArgumentException
  + Funcionario buscarPorId(int id) throws SQLException
  + List<Funcionario> listarTodos() throws SQLException
}

Funcionario <|-- Desenvolvedor
Funcionario <|-- Gerente

@enduml
